<resources>
    <string name="app_name">Stocks Monitor</string>
    <string name="hint_search_input">Find company or ticker</string>
    <string name="label_stocks">Stocks</string>
    <string name="label_favourite">Favourite</string>
    <string name="desc_favourite">Add to/remove from favourite</string>
    <string name="desc_back">Back</string>
    <string name="label_positive_market_change">+%s</string>
    <string name="label_day_delta">%1$s (%2$s%%)</string>
    <string name="label_popular_requests">Popular requests</string>
    <string name="label_searched_requests">You\'ve searched for this</string>
    <string name="btn_show_more">Show more</string>
    <string name="label_empty_favourites">You have no favourites at this moment</string>
    <string name="label_news">News</string>
</resources>