<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shp_search_bg"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:text="@string/hint_search_input"
            android:textAppearance="@style/PrimarySemiBoldText16"
            app:drawableStartCompat="@drawable/ic_search"
            app:layout_scrollFlags="scroll|snap" />

        <LinearLayout
            android:id="@+id/llTabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStocks"
                style="@style/TabButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textAppearance="@style/PrimaryBoldText28"
                android:text="@string/label_stocks" />

            <Button
                android:id="@+id/btnFavourite"
                style="@style/TabButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/SecondaryBoldText18"
                android:text="@string/label_favourite" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.example.stocksmonitor.utils.NotScrollableViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>