<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.details.StockDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/desc_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/PrimaryBoldText18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                app:layout_constraintEnd_toStartOf="@+id/chbFavourite"
                app:layout_constraintStart_toEndOf="@+id/ibBack"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="APPL" />

            <TextView
                android:id="@+id/tvSecondaryTitle"
                style="@style/PrimarySemiBoldText12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/chbFavourite"
                app:layout_constraintStart_toEndOf="@+id/ibBack"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                tools:text="Apple Inc." />

            <CheckBox
                android:id="@+id/chbFavourite"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:button="@drawable/favourite_black_chb"
                android:contentDescription="@string/desc_favourite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/PrimaryBoldText18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/label_news" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="16dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>