<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.search.SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="none"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_back"
            app:startIconTint="@color/black">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shp_search_bg"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textAppearance="@style/PrimarySemiBoldText16" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:id="@+id/scvQueriesContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPopularQueries"
                    style="@style/PrimaryBoldText18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/label_popular_requests" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopularQueries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingStart="16dp"
                    android:paddingEnd="12dp"
                    android:visibility="gone" />

                <include
                    android:id="@+id/tagsPlaceholderLayout"
                    layout="@layout/tags_placeholder" />

                <TextView
                    android:id="@+id/tvSearchedQueries"
                    style="@style/PrimaryBoldText18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/label_searched_requests"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSearchedQueries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="28dp"
                    android:clipToPadding="false"
                    android:paddingStart="16dp"
                    android:paddingEnd="12dp"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/llStocks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvStocks"
                style="@style/PrimaryBoldText18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/label_stocks" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvStocks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:clipToPadding="false"
                android:paddingBottom="56dp" />
        </LinearLayout>

        <include
            android:id="@+id/stocksPlaceholderLayout"
            layout="@layout/stocks_placeholder"
            android:visibility="gone" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>